--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Hangman</string>
+    <string name="start">Start</string>
+    <string name="hangman">HangMan!</string>
+    <string name="attempts">Attempts:</string>
+    <string name="select_a_letter">Select A Letter</string>
+    <string name="_10">10</string>
+    <string name="letters_used">Letters Used:</string>
 </resources>
